# lice

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  spdx.rs  types.rs
