[package]
name = "lice"
name = "lice"
description = "Dead simple, minimal SPDX License generator library written in Rust."
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["refcell"]
rust-version = "1.72"
keywords = ["lice", "generator", "license", "spdx", "library"]
categories = ["library"]
homepage = "https://github.com/refcell/lice"
repository = "https://github.com/refcell/lice"
exclude = ["benches/", "tests/"]

[dependencies]
anyhow = "1.0.75"
