[package]
name = "lice"
description = "Dead simple, minimal SPDX License generator library written in Rust."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["refcell"]
rust-version = "1.72"
keywords = ["lice", "generator", "license", "spdx", "library"]
categories = ["library"]
homepage = "https://github.com/refcell/lice"
repository = "https://github.com/refcell/lice"
exclude = ["benches/", "tests/"]

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
strsim = "0.10.0"
